@@ -227,6 +227,7 @@ All cgroup/resource control settings are available for transient units
 ✓ CPUQuota=
 ✓ CPUQuotaPeriodSec=
 ✓ MemoryAccounting=
+✓ DefaultMemoryMin=
 ✓ MemoryMin=
 ✓ DefaultMemoryLow=
 ✓ MemoryLow=
